--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Vagrant Ape
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>VagrantApe</title>
+  </head>
+  <body>
+    <h1>VAGRANTAPE</h1>
+  </body>
+</html>
